--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.2",
     "date-and-time": "^3.6.0",
     "date-fns": "^4.1.0",
     "docxtemplater": "^3.60.2",
@@ -62,12 +62,13 @@
     "pizzip": "^3.1.8",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
